--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             <span class="note">NOTE: Show your left wrist to play the first song and the right wrist to play the second song. Keep at least one feet distance from the webcam so that, it detects the wrist position right away.</span>
         </h3>
         <h2 class="btn song_name">SONG NAME</h2>
+        <br><br>
+  <button onclick="play();" class="btn btn-success play">Play</button>
        </center>
+       <script src="main.js"></script>
     </body>
 </html>
